# richdem

./: CMakeLists.txt
.github/workflows/: ci.yml
wrappers/pyrichdem/: pyproject.toml  setup.py
wrappers/pyrichdem/richdem/: __init__.py
wrappers/pyrichdem/src/: pywrapper.cpp
