[build-system]
requires = ["pybind11", "numpy", "setuptools", "wheel"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win* *-manylinux_i686* *-musllinux_i686*"
before-build = """
mkdir -p _build
cd _build
cmake -S .. -DCMAKE_INSTALL_PREFIX=$RICHDEM_PREFIX -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=11 -DUSE_GDAL=ON
make
make install
"""
test-command = """
python -c "import richdem; print(richdem.__version__)"
"""

[tool.cibuildwheel.linux]
archs = "x86_64,aarch64"
before-all = "yum install -y gdal gdal-devel"
repair-wheel-command = """
LD_LIBRARY_PATH="$RICHDEM_PREFIX/lib:${LD_LIBRARY_PATH:-}" auditwheel repair -w {dest_dir} {wheel}
"""
environment = """
RICHDEM_PREFIX="$(pwd -P)/_inst"
"""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install gdal libomp"
environment = """
MACOSX_DEPLOYMENT_TARGET=11.0 \
RICHDEM_PREFIX="{project}/_inst" \
OMP_PREFIX="$(brew --prefix libomp)" \
CPPFLAGS="-I$OMP_PREFIX/include ${CPPFLAGS:-}" \
LDFLAGS="-L$OMP_PREFIX/lib -Wl,-rpath,$OMP_PREFIX/lib ${LDFLAGS:-}" \
CFLAGS="-Xpreprocessor -fopenmp ${CFLAGS:-}" \
CXXFLAGS="-Xpreprocessor -fopenmp ${CXXFLAGS:-}"
"""
