[build-system]
requires = ["pybind11", "numpy", "setuptools", "wheel"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win* *-manylinux_i686* *-musllinux_i686*"
before-build = """
mkdir -p _build
cd _build
cmake -S .. -DCMAKE_INSTALL_PREFIX=$RICHDEM_PREFIX -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=11 -DUSE_GDAL=ON
make
make install
"""
test-command = """
python -c "import richdem; print(richdem.__version__)"
"""

[tool.cibuildwheel.linux]
archs = "x86_64,aarch64"
before-all = "yum install -y gdal gdal-devel"
repair-wheel-command = """
LD_LIBRARY_PATH="$RICHDEM_PREFIX/lib:${LD_LIBRARY_PATH:-}" auditwheel repair -w {dest_dir} {wheel}
"""
environment = """
RICHDEM_PREFIX="$(pwd -P)/_inst"
"""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install gdal libomp"
before-build = """
mkdir -p _build
cd _build
cmake -S .. \
  -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
  -DCMAKE_INSTALL_PREFIX=$RICHDEM_PREFIX \
  -DCMAKE_BUILD_TYPE=Release \
  -DCMAKE_CXX_STANDARD=11 \
  -DUSE_GDAL=ON \
  -DOpenMP_CXX_FLAGS="-Xpreprocessor -fopenmp -I${OMP_PREFIX}/include" \
  -DOpenMP_CXX_LIB_NAMES="omp" \
  -DOpenMP_omp_LIBRARY="${OMP_PREFIX}/lib/libomp.dylib"
make -j2
make install
"""
environment = """
RICHDEM_PREFIX="$(pwd -P)/_inst" \
OMP_PREFIX="$(brew --prefix libomp)"
"""
