[build-system]
requires = [
  "pybind11",
  "numpy>=1.23",
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "richdem"
version = "2.1.2"
description = "High-Performance Terrain Analysis"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Richard Barnes", email = "rbarnes@umn.edu" },
]
keywords = ["GIS", "terrain", "hydrology", "geomorphology", "raster"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Other Audience",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy>=1.23",
]

[project.urls]
Homepage = "https://github.com/r-barnes/richdem"
Repository = "https://github.com/r-barnes/richdem"

[project.scripts]
rd_depression_filling = "richdem.cli:DepressionFilling"
rd_breach_depressions = "richdem.cli:BreachDepressions"
rd_flow_accumulation = "richdem.cli:FlowAccumulation"
rd_terrain_attribute = "richdem.cli:TerrainAttribute"
rd_info = "richdem.cli:RdInfo"
rd_compare = "richdem.cli:RdCompare"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win* *-manylinux_i686* *-musllinux_i686*"
before-build = """
mkdir -p _build
cd _build
cmake -S .. -DCMAKE_INSTALL_PREFIX=$RICHDEM_PREFIX -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=11 -DUSE_GDAL=ON
make
make install
"""
test-command = """
python -c "import richdem; print(richdem.__version__)"
"""

[tool.cibuildwheel.linux]
archs = "x86_64,aarch64"
before-all = "yum install -y gdal gdal-devel"
repair-wheel-command = """
LD_LIBRARY_PATH="$RICHDEM_PREFIX/lib:${LD_LIBRARY_PATH:-}" auditwheel repair -w {dest_dir} {wheel}
"""
environment = """
RICHDEM_PREFIX="$(pwd -P)/_inst"
"""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install gdal libomp"
before-build = """
mkdir -p _build
cd _build
cmake -S .. \
  -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
  -DCMAKE_INSTALL_PREFIX=$RICHDEM_PREFIX \
  -DCMAKE_BUILD_TYPE=Release \
  -DCMAKE_CXX_STANDARD=11 \
  -DUSE_GDAL=ON \
  -DOpenMP_CXX_FLAGS="-Xpreprocessor -fopenmp -I${OMP_PREFIX}/include" \
  -DOpenMP_CXX_LIB_NAMES="omp" \
  -DOpenMP_omp_LIBRARY="${OMP_PREFIX}/lib/libomp.dylib"
make -j2
make install
"""
environment = """
RICHDEM_PREFIX="$(pwd -P)/_inst" \
OMP_PREFIX="$(brew --prefix libomp)"
"""
